Fix vimeo crash on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -679,11 +679,11 @@ a:visited {
 }
 
 /* Adjust styles for screens smaller than 600px */
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
     .video-container {
-        padding-bottom: 75%; /* Adjust aspect ratio for smaller screens */
+        padding-bottom: 75%;
     }
-}
+} */
 
 /*scroll padding, to avoid markdown navigation colapse, added by me on 29.01.2024*/
 html {
